...
    <string name="app_icon">App Icon</string>
    <string name="app_name" translatable="false">Plutus\' Wallet</string>
    <string name="blank_string" translatable="false"> </string>
    <string name="category_all">All</string>
    <string name="category_create">Create New Category</string>
    <string name="cfl_no_transactions">No transactions fulfill the filters being applied!</string>
    <string name="filter_account">Account</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_category">Category</string>
    <string name="filter_date">Date</string>
    <string name="filter_invalid_date_range">End date must be after start date!!</string>
    <string name="filter_end">End</string>
    <string name="filter_type">Type</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_start">Start</string>
    <string name="chart_total">"Total: "</string>
    <string name="chart_amount" translatable="false">%1$s%2$s</string>
    <string name="library_mpandroidchart" tools:ignore="ExtraTranslation" translatable="false">MPAndroidChart</string>
    <string name="library_mpandroidchart_github" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="period_days">Days</string>
...
    <string name="transaction_memo">Memo</string>
    <string name="transaction_memo_hint">\u2517 Additional information</string>
    <string name="transaction_repeat">Repeat</string>
    <string name="transaction_title">Title</string>
    <string name="transaction_title_hint">\u2517 Location of purchase</string>
    <string name="transaction_total">Total</string>
    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="categories">Categories</string>
    <string name="alert_dialog_edit_account">Edit Account</string>
    <string name="alert_dialog_input_hint">Enter A Name</string>
    <string name="alert_dialog_create_account">Create Account</string>
    <string name="alert_dialog_edit_category">Edit Category</string>
    <string name="alert_dialog_create_category">Create Category</string>
...
    <string name="accounts">Accounts</string>
    <string name="account_new">New Account</string>
    <string name="category_new">New Category</string>
    <string name="cfl_menu_transaction">New Transaction</string>
    <string name="transaction_save">Save Transaction</string>
    <string name="transaction">Transaction</string>
    <string name="cfl_overview">Overview</string>
    <string name="cfl_drawer_description">Open Navigation Drawer</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="app_github_link" translatable="false">https://github.com/HeyZeusV/PlutusWallet</string>
    <string name="about_github" translatable="false">GitHub</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_theme_light">Light</string>
    <string name="preferences_theme_dark">Dark</string>
    <string name="preferences_theme_system">System</string>
    <string name="alert_dialog_input_error">Can\'t be blank!</string>
    <string name="transaction_period">Period</string>
    <string name="cfl_menu_filter">Edit Filter</string>
    <string name="filter_no_selected_account">Please select at least one account!!</string>
    <string name="filter_no_selected_category">Please select at least one category!!</string>
    <string name="filter_no_selected_dates">Please select start and end dates!!</string>
    <string name="data_edit">Edit</string>
    <string name="data_delete">Delete</string>
    <string name="about_privacy_policy">Privacy Policy</string>
...
    <string name="tt_ad_option" translatable="false">AlertDialog Option %1$s</string>
    <string name="tt_ad_input" translatable="false">AlertDialog Input</string>
    <string name="tt_app_bar" translatable="false">AppBar</string>
    <string name="tt_app_barTitle" translatable="false">AppBar %1$s</string>
    <string name="tt_app_drawItem" translatable="false">DrawerItem %1$s</string>
    <string name="tt_app_scaffold" translatable="false">PWApp Scaffold</string>
    <string name="tt_chart_empty" translatable="false">Empty Chart for page %1$d</string>
    <string name="tt_chart_page" translatable="false">Chart Page %1$d</string>
    <string name="tt_chart_total" translatable="false">Chart Total for page %1$d</string>
    <string name="tt_chart_vp" translatable="false">Chart ViewPager</string>
    <string name="tt_filter_act" translatable="false">Filter Action</string>
    <string name="tt_filter_card" translatable="false">Filter Card</string>
    <string name="tt_filter_chip" translatable="false">Chip: %1$s</string>
    <string name="tt_filter_end" translatable="false">Filter End Date</string>
    <string name="tt_filter_start" translatable="false">Filter Start Date</string>
    <string name="tt_filter_type" translatable="false">%1$s Button</string>
    <string name="tt_list_delete" translatable="false">%1$s Delete</string>
    <string name="tt_list_edit" translatable="false">%1$s Edit</string>
    <string name="tt_list_sub" translatable="false">List Subtitle %1$s</string>
    <string name="tt_list_vp" translatable="false">List ViewPager</string>
    <string name="tt_set_name" translatable="false">%1$s</string>
    <string name="tt_set_select" translatable="false">%1$s %2$s</string>
    <string name="tt_tran_ddmItem" translatable="false">DropdownMenuItem %1$s</string>
    <string name="tt_tranL_empty" translatable="false">Empty Transaction List</string>
    <string name="tt_tranL_item" translatable="false">TranList item %1$d</string>
</resources>
